--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,14 @@ body {
     font-size: 14px;
     letter-spacing: .01em;
     line-height: 1.3;
-    padding: 3em;
+    padding: 24px;
     max-width: 800px;
+}
+
+@media screen and (max-width: 960px) {
+    body {
+        padding: 16px;
+    }
 }
 
 h1 {
