--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ img {
     max-width: 100%;
 }
 
-button {
+.button {
     box-shadow: 0 1px 5px rgba(0,0,0,.2), 0 2px 2px rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.12);
     border: none;
     display: inline-block;
@@ -79,6 +79,6 @@ button {
     color: #3a3a3a;
 }
 
-button:hover {
+.button:hover {
     background-color: #e0e0e0;
 }
