--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,19 @@
-@font-face {
-    font-family: 'Noto Sans';
-    src: url(../fonts/NotoSans-Regular.ttf);
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Noto Sans';
-    src: url(../fonts/NotoSans-Bold.ttf);
-    font-weight: bold;
-}
+/*
+ * Loosely based on the Kolibri style guide, but modified to optimize for
+ * readability and for ability to match current Kolibri styling or potential
+ * modifications to styling and color scheme.
+ */
 
 body {
-    color: #424242;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 14px;
+    background: white;
+    color: #333;
+    font-family: 'Noto Sans', NotoSans, sans-serif;
+    font-size: 19px;
     letter-spacing: .01em;
-    line-height: 1.3;
+    line-height: 1.55;
+    margin: auto;
+    max-width: 700px;
     padding: 24px;
-    max-width: 800px;
 }
 
 @media screen and (max-width: 960px) {
@@ -41,7 +36,7 @@ h3 {
 }
 
 a {
-    color: #996189;
+    color: #333;
     text-decoration: underline;
     cursor: pointer;
     padding: 0;
@@ -67,7 +62,7 @@ img {
     min-height: 36px;
     border-radius: 2px;
     transition: all .4s cubic-bezier(.25,.8,.25,1);
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 700;
     line-height: 36px;
     text-transform: uppercase;
@@ -75,10 +70,6 @@ img {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    background-color: #eee;
+    background-color: white;
     color: #3a3a3a;
-}
-
-.button:hover {
-    background-color: #e0e0e0;
 }
